Version 0.0.4 (not yet released):
- CVL: Fix for cvl_skeleton3d(), memory savings for cvl_skeleton() and 
  cvl_skeleton3d().
- CVL: Add function cvl_field_array() to access the raw array data of a field.
- Minor documentation improvements.

Version 0.0.3:
- Gnulib update.
- CVL: Remove cvl_field_ref*() functions.
- CVL: Switched optical flow functions from double to float.
- CVL: Switched color functions from double to float.
- CVL: Switched vector functions from double to float.
- CVL: Switched the cvl_edge_* functions to use floats instead of doubles.
- CVL: Added cvl_iroundf() to round floats.
- CVL: Simplify cvl_io_eof(). Remove obsoleted cvl_field_stream_eof().
- cvtool: Added a mat command as an interface to cvl_mat() and cvl_mat3d().
- CVL: Added cvl_mat() and cvl_mat3d() to compute the Medial Axis Transform 
  (MAT).
- cvtool: Added a skeleton command as an interface to cvl_skeleton() and 
  cvl_skeleton3d().
- CVL: Added cvl_skeleton() and cvl_skeleton3d() to compute skeletons.
- cvtool: Added a fieldconv command that converts between fields and frames.
- CVL: Added cvl_wrap() and cvl_clamp() for wrapped and clamped indexing.
- CVL: Fixed cvl_reflect(): avoid arithmetic overflow if bound > INT_MAX / 2.
- CVL: Fixed cvl_sedt(): black is background and everything else is foreground,
  not vice-versa!
- CVL: Add functions cvl_gcd() and cvl_lcm() to compute the Greatest Common
  Divisor and the Least Common Multiple.
- Documentation: Minor improvements.
- Documentation: Updated doc/cvtool-example-nasa-script.sh.
- CVL: Simplified the handling of fields, especially the input/output.
- Gnulib update.
- Autoconf update: build-aux/c.m4 is not needed anymore.
- cvtool: Enhanced diff command. It can now use cvl_diffstat() and print the
  resulting statistics.
- CVL: Added new function cvl_diffstat() to compute simple statistics for the 
  differences between two frames.
- CVL: Add cvl_sort_array_float()